<resources>
    <string name="app_name">Star Wars dice</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="d6_good">Fortune</string>
    <string name="d8_good">Aptitude</string>
    <string name="d12_good">Maitrise</string>
    <string name="d6_bad">Infortune</string>
    <string name="d8_bad">Difficulté</string>
    <string name="d12_bad">Défi</string>
    <string name="go">Go !</string>
    <string name="raz">RAZ</string>
    <string name="reset">Refaire</string>

    <string name="title_activity_display_result">DisplayResult</string>
</resources>
